--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,11 @@ a.button:hover {
 .share-button:hover {
   background-color: #E1E1E1;
 }
+@media (max-width:436px) {
+  .profile-img, .share-button {
+    display: none;
+  }
+}
 /*select any elements with a lass of profile-img*/
 .profile-img {
   border-radius: 25px;
@@ -106,6 +111,17 @@ a.button:hover {
   font-size: 16px;
   border-radius: 5px;
   display: block;
+}
+@media (max-width:610px) {
+  .search-box input {
+    width: 50%;
+  }
+}
+
+@media (max-width:430px) {
+  .search-box input {
+    width: 70%;
+  }
 }
 /*select any elements with a class of search-box and then find any input tags inside that*/
 .search-box input:focus {
@@ -147,6 +163,11 @@ a.button:hover {
   width: 100%;
   background-color: #f2f2f2;
   border-top: 1px solid #e4e4e4;
+}
+@media (max-width:519px) {
+  .bottom-site-links {
+    display: none;
+  }
 }
 /*select any elements with a class of left-site-links*/
 .left-site-links,
